objects/DMAPP__DM_Strategy_Map_Node_Parent__c.object
<CustomObject>
    <fields>
        <fullName>DMAPP__ChildNode__c</fullName>
        <deleteConstraint>Cascade</deleteConstraint>
        <label>Strategy Map Child Node</label>
        <referenceTo>DMAPP__DM_Strategy_Map_Node__c</referenceTo>
        <relationshipLabel>DM Strategy Map Node Parents</relationshipLabel>
        <relationshipName>StrategyMapParents</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DMAPP__DM_Strategy_Map__c</fullName>
        <label>DM Strategy Map</label>
        <referenceTo>DMAPP__DM_Strategy_Map__c</referenceTo>
        <relationshipLabel>DM Strategy Map Node Parents</relationshipLabel>
        <relationshipName>DM_Strategy_Map_Node_Parents</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>DMAPP__DealmakerID__c</fullName>
        <description>An external ID used for Dealmaker</description>
        <externalId>true</externalId>
        <label>DealmakerID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>DMAPP__ParentNode__c</fullName>
        <deleteConstraint>Cascade</deleteConstraint>
        <label>Strategy Map Parent Node</label>
        <referenceTo>DMAPP__DM_Strategy_Map_Node__c</referenceTo>
        <relationshipLabel>DM Strategy Map Node Parents (DM Strategy Map Node)</relationshipLabel>
        <relationshipName>StrategyMapChildren</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DMAPP__Sort_Order__c</fullName>
        <label>Sort Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Strategy Map Node Parent</label>
    <nameField>
        <label>Strategy Map Node Parent Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Strategy Map Node Parents</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>